--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+.leaflet-container {
+  width: 60vw;
+  height: 60vh;
+  margin: auto;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
